--- a/mobile-home.css
+++ b/mobile-home.css
@@ -1,14 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
+:root {
+    --primaryColor: #078A93;
+    --primaryColorHover: ;
+    --backgroundColor: #078A93;
+    font-family: 'Roboto', sans-serif;
+}
+
+body {
+    width: 100%;
+    margin: 0;
+}
+
 .menubar {
     display: flex;
     flex-direction: row;
-    margin-top: 2rem;
+    padding: 2rem 0 1rem 0;
     justify-content: space-around;
     background-color: #078A93;
-    height: 4rem;
+    /* height: 4rem; */
     align-items: center;
+    width: 100%;
+}
 
+.menubar button {
+    background-color: transparent;
+    border: none;
 }
 
 .search {
@@ -19,10 +36,12 @@
     text-align: left;
     font-family: 'Roboto', sans-serif;
     font-size: 2rem;
-    z-index: 10;outline: none;
+    /* z-index: 10; */
+    outline: none;
     border: none;
     box-sizing: border-box;
     text-decoration: none;
+    width: 100%;
 }
 
 .date {
@@ -53,9 +72,79 @@ hr {
 
 }
 
-.newTask {
+/*_________________________________________________________________________________*/
+/*FORM ELEMENT WITH INPUT FIELDS*/
+form {
     display: flex;
-    flex-direction: row;
-    justify-content:flex-start;
-    margin: 3rem;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+}
+::placeholder {
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    opacity: 60%;
+    text-align: start
+}
+
+#input-heading {
+    width: 85%;
+    height: 3rem;
+    margin-bottom: 0.5rem;
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+    border: 1px solid lightgrey;
+    border-radius: 10px;
+}
+#input-description {
+    width: 85%;
+    height: 7rem;
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+    border: 1px solid lightgrey;
+    border-radius: 10px;
+    /* put placeholder && input text to the top, also break text after end of line */
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 85%;
+}
+.addTaskBtn {
+    border-radius: 10px;
+    background-color: #078A93;
+    font-family: 'Roboto', sans-serif;
+    color: #E3E0E0;
+    border: 0px;
+    width: 40%;
+    height: 3rem;
+
+}
+.cancelTaskBtn {
+    border: none;
+    border-radius: 10px;
+    font-family: 'Roboto', sans-serif;
+    width: 40%;
+    height: 3rem;
+
+}
+/*_________________________________________________________________________________*/
+/*RENDERING OF INPUTTED TASKS*/
+.renderTasks {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.renderTasks div {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.renderTasks h3, p {
+    width: 100%;
 }
